# matrix-simp

./: Cargo.toml  README.md
src/: lib.rs
