[package]
name = "matrix-simp"
license = "MIT"
description = "A linear algebra package (WIP)"
readme = "README.md"
keywords = ["linear-algebra", "matrix", "vectors"]
categories = ["mathematics"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"

